--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-water-wave": "^2.0.1",
     "styled-components": "^6.0.0-rc.5",
     "web-vitals": "^2.1.4"
